Migrate from Java 8 to Java 17
- Update maven.compiler.source/target from 1.8 to 17
- Replace mockito-inline with mockito-core and upgrade to 5.14.2
- Replace deprecated Class.newInstance() with Constructor.newInstance()
- Update project description and release descriptor for Java 17

Co-authored-by: Ona <no-reply@ona.com>